@@ -143,6 +143,14 @@ elseif ($fTable == "alias" or $fTable == "mailbox")
                 $tMessage.=')</span>';
             }
             db_log ($SESSID_USERNAME, $fDomain, 'delete_mailbox', $fDelete);
+            $result = db_query("SELECT * FROM $table_quota WHERE username='$fDelete'");
+            if($result['rows'] >= 1) {
+                db_query ("DELETE FROM $table_quota WHERE username='$fDelete'");
+            }
+            $result = db_query("SELECT * FROM $table_quota2 WHERE username='$fDelete'");
+            if($result['rows'] == 1) {
+                db_query ("DELETE FROM $table_quota2 WHERE username='$fDelete'");
+            }
         }
         $result = db_query("SELECT * FROM $table_vacation WHERE email = '$fDelete' AND domain = '$fDomain'");
         if($result['rows'] == 1) {
